--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "author": {"email": "mushudkofiabuu@gmail.com", "name": "Mushud Kofi"},
+  "displayName": "NearMe",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,10 +12,13 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-paper": "^2.15.2",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
   },
+  
   "private": true
 }
