--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "author": {"email": "mushudkofiabuu@gmail.com", "name": "Mushud Kofi"},
+  "author": {
+    "email": "mushudkofiabuu@gmail.com",
+    "name": "Mushud Kofi"
+  },
   "displayName": "NearMe",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,6 +13,7 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "firebase": "^6.1.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-paper": "^2.15.2",
@@ -19,6 +23,5 @@
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
   },
-  
   "private": true
 }
