--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^32.0.0",
     "firebase": "^6.1.0",
     "react": "16.5.0",
