changed bottom navigation stylle

--- a/app.json
+++ b/app.json
@@ -8,7 +8,9 @@
       "ios",
       "android"
     ],
-    
+    "androidStatusBar": {
+      "barStyle": "light-content"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
